--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <hr>
                 <p id="lab">Enter your password</p>
             </div>
-            <p><u>Have you forgotten your password?</u></p>
+            <p><a>Have you forgotten your password?</a></p>
             <button id="log">LOG IN</button>
         </div>
         <div class="purchase">
